<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home2"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gift"
            android:icon="@drawable/gift"
            android:title="@string/menu_gift" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/cart"
            android:title="@string/menu_checkout" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/blog"
            android:title="@string/menu_blog" />
    </group>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cart" />

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_InternationalHome"
            android:icon="@drawable/home1"
            android:title="@string/menu_InternationalHome" />
        <item
            android:id="@+id/nav_InternationalGift"
            android:icon="@drawable/gift1"
            android:title="@string/menu_InternationalGift" />
        <item
            android:id="@+id/nav_InternationalLogin"
            android:icon="@drawable/login1"
            android:title="@string/menu_InternationalLogin" />
        <item
            android:id="@+id/nav_InternationalCheckout"
            android:icon="@drawable/cart1"
            android:title="@string/menu_InternationalCheckout" />
        <item
            android:id="@+id/nav_Intblog"
            android:icon="@drawable/blog1"
            android:title="@string/menu_Intblog" />
    </group>
</menu>